Carrito de compras agregado (sin checkout)

--- a/Web.config
+++ b/Web.config
@@ -9,12 +9,12 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
   <connectionStrings>
-<add name="DefaultConnection" connectionString="Data Source=DESKTOP-9V2D37E;Initial Catalog=CasaMatriz;Integrated Security=True"
-providerName="System.Data.SqlClient" />
-<add name="BD_Proyecto"
-connectionString="Data Source=DESKTOP-9V2D37E;Initial Catalog=CasaMatriz;Integrated Security=True"
-providerName="System.Data.SqlClient" />
+<add name="DefaultConnection" connectionString="Data Source=DESKTOP-9V2D37E;Initial Catalog=CasaMatriz;Integrated Security=True" providerName="System.Data.SqlClient" />
+<add name="BD_Proyecto" connectionString="Data Source=DESKTOP-9V2D37E;Initial Catalog=CasaMatriz;Integrated Security=True" providerName="System.Data.SqlClient" />
+<add name="CarritoDeCompras" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=B:\VS19\source\repos\BD_Proyecto\App_Data\CarritoDeCompras.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
 </connectionStrings>
+	<appSettings>
+	</appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
