--- a/Web.config
+++ b/Web.config
@@ -7,12 +7,12 @@
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </configSections>
+  </configSections>
   <connectionStrings>
-<add name="DefaultConnection" connectionString="Data Source=DESKTOP-9V2D37E;Initial Catalog=CasaMatriz;Integrated Security=True" providerName="System.Data.SqlClient" />
-<add name="BD_Proyecto" connectionString="Data Source=DESKTOP-9V2D37E;Initial Catalog=CasaMatriz;Integrated Security=True" providerName="System.Data.SqlClient" />
-<add name="CarritoDeCompras" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=B:\VS19\source\repos\BD_Proyecto\App_Data\CarritoDeCompras.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-</connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-9V2D37E;Initial Catalog=CasaMatriz;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BD_Proyecto" connectionString="Data Source=DESKTOP-9V2D37E;Initial Catalog=CasaMatriz;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CarritoDeCompras" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=B:\VS19\source\repos\BD_Proyecto\App_Data\CarritoDeCompras.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 	<appSettings>
 	</appSettings>
   <system.web>
@@ -26,6 +26,7 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
+    <authentication mode="Forms" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
@@ -54,5 +55,4 @@
       <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
   </system.codedom>
-
 </configuration>
