--- a/BD_Proyecto.csproj
+++ b/BD_Proyecto.csproj
@@ -166,6 +166,7 @@
     <Content Include="AdministrarMarcaProveedor.aspx" />
     <Content Include="Admin\Ferreterias\AdministrarFerreterias.aspx" />
     <Content Include="Admin\Ferreterias\FerreteriaGAM.aspx" />
+    <Content Include="AdministrarEmpleados.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Productos_img\control.jpg" />
     <Content Include="Productos_img\iphone-7-black.jpg" />
@@ -330,6 +331,13 @@
     </Compile>
     <Compile Include="Admin\Ferreterias\FerreteriaGAM.aspx.designer.cs">
       <DependentUpon>FerreteriaGAM.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AdministrarEmpleados.aspx.cs">
+      <DependentUpon>AdministrarEmpleados.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AdministrarEmpleados.aspx.designer.cs">
+      <DependentUpon>AdministrarEmpleados.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
