admin amonestaciones + cambios visuales

--- a/BD_Proyecto.csproj
+++ b/BD_Proyecto.csproj
@@ -169,6 +169,7 @@
     <Content Include="Admin\Empleados\AdministrarEmpleados.aspx" />
     <Content Include="Admin\Clientes\AdministrarClientes.aspx" />
     <Content Include="Admin\Vehiculos\AdminCarros.aspx" />
+    <Content Include="Admin\Empleados\AdministrarAmonestaciones.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Productos_img\control.jpg" />
     <Content Include="Productos_img\iphone-7-black.jpg" />
@@ -354,6 +355,13 @@
     </Compile>
     <Compile Include="Admin\Vehiculos\AdminCarros.aspx.designer.cs">
       <DependentUpon>AdminCarros.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Empleados\AdministrarAmonestaciones.aspx.cs">
+      <DependentUpon>AdministrarAmonestaciones.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Empleados\AdministrarAmonestaciones.aspx.designer.cs">
+      <DependentUpon>AdministrarAmonestaciones.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
